modules/network/private-subnets.tf
/* Private subnet */
resource "aws_subnet" "private" {
  vpc_id            = "${aws_vpc.default.id}"

  cidr_block = "${var.vpc_base_ip}.10.0/24"
  availability_zone = "${var.aws_availability_zone}"
  map_public_ip_on_launch = false
  tags { 
    Name = "private ${var.environment_name}" 
  }
}

/* Routing table for private subnet */
resource "aws_route_table" "private" {
  vpc_id = "${aws_vpc.default.id}"
  route {
    cidr_block = "0.0.0.0/0"
    instance_id = "${aws_instance.vpn.id}"
  }
}



/* Associate the routing table to public subnet */

resource "aws_route_table_association" "private" {
  subnet_id = "${aws_subnet.private.id}"
  route_table_id = "${aws_route_table.private.id}"
}
